# prueba-LITE-THINKING

./: .env.example  .gitignore  AI_RECOMMENDATIONS_FEATURE.md  API_CONTRACTS.md  ARCHITECTURE_INTEGRATION.md  AUTHENTICATION.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  PRODUCTS_FEATURE.md  README.md  TEST_RESULTS.md  docker-compose.yml
.github/agents/: agent-architecture.md  agent-quality.md  agent-security.md
backend/: Dockerfile  requirements.txt
backend/api/: permissions.py  urls_auth.py  urls_companies.py  urls_inventory.py  urls_products.py  urls_v1.py
backend/api/serializers/: auth.py  company.py  inventory.py  product.py
backend/api/tests/: test_ai_recommendations.py  test_company_inventory.py  test_domain_integration.py  test_products.py
backend/api/views/: auth.py  companies.py  company_inventory.py  inventory.py  products.py
backend/application/services/: __init__.py  ai_recommendations_service.py  email_service.py  pdf_service.py
backend/application/use_cases/: __init__.py  company_use_cases.py  inventory_use_cases.py  (+1 more)
backend/config/: settings.py  test_settings.py  urls.py
backend/infrastructure/: admin.py  apps.py  domain_loader.py
domain/: pyproject.toml
domain/src/domain/entities/: company.py  currency.py  inventory_item.py  money.py  product.py
domain/src/domain/exceptions/: errors.py
domain/src/domain/services/: company_registration_service.py  inventory_management_service.py  product_registration_service.py
frontend/: README.md  package-lock.json
frontend/src/: App.js
(+48 files in other folders)
